# ARK

./: .gitignore  README.md  models_abl.py  pyproject.toml
configs/: autoreg_syn-paths.yaml  autoreg_syn-tipr.yaml  autoreg_syn-types.yaml  autoreg_wd-articles.yaml  autoreg_wd-movies.yaml  rescal-vae-syn-paths-dense.yaml  rescal-vae-syn-paths-sparse.yaml  rescal-vae-syn-paths.yaml  rescal-vae-syn-tipr.yaml  rescal-vae-syn-types.yaml  rescal-vae-wd-articles.yaml  rescal-vae-wd-movies.yaml  syn-paths.yaml  syn-tipr.yaml  syn-types.yaml  wd-articles.yaml  wd-movies.yaml
kgvae/experiments/: ablation_study.py  conditioned.py  graph_reconstruction.py  interpolation.py  sampling.py  train.py
kgvae/model/: layers.py  models.py  rescal_vae_model.py  utils.py  vae_model.py  verification.py
